Corrected alignment errors

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ main {
     background-color: hsl(216, 50%, 16%);
     box-sizing: border-box;
     padding: 1em;
-    max-width: 339px;
+    max-width: calc(375px - 2em);
     border-radius: 20px;
 }
 
@@ -60,6 +60,7 @@ main {
 h1 {
     font-size: 22px;
     color: hsl(0, 0%, 100%);
+    margin: 1em 0;
 }
 
 h1:hover,
